--- a/templates/questions_5.html
+++ b/templates/questions_5.html
@@ -15,11 +15,11 @@
             <section>
                 <select class="form-select" aria-label="Default select example" name="general_health" required>
                     <option selected disabled value="">Select</option>
-                    <option value="Male">Poor</option>
-                    <option value="Fair">Fair</option>
-                    <option value="Good">Good</option>
-                    <option value="Very Good">Very Good</option>
-                    <option value="Excellent">Excellent</option>
+                    <option value="0">Poor</option>
+                    <option value="1">Fair</option>
+                    <option value="2">Good</option>
+                    <option value="3">Very Good</option>
+                    <option value="4">Excellent</option>
                 </select>
             </section>
             <input type="hidden" name="question_number" value="{{question_number}}">
