--- a/templates/questions_3.html
+++ b/templates/questions_3.html
@@ -41,7 +41,18 @@
             </div>
 
             <div id="second" class="form-floating mb-3">
+                <div class="row g-2">
+                    <div class="col-md">
+                        <div id="second-one">
 
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div id="second-two">
+
+                        </div>
+                    </div>
+                </div>
             </div>
             <input type="hidden" name="question_number" value="{{question_number}}">
             <div class="space-between">
@@ -52,81 +63,5 @@
     </form>
 </section>
 <!-- TODO: Calculate height and assign it to hidden input 'height'-->
-<script>
-    function changeFunc() {
-        const elem = document.getElementById("height");
-        const value = elem.value;
-        if(value == 1) {
-            const parentSec = document.getElementById("second")
-            parentSec.innerHTML = "";
-
-            const label = document.createElement("label");
-            label.setAttribute('for', 'feet');
-            label.innerHTML = "Feet";
-            const input = document.createElement("input");
-            input.setAttribute('type', 'number')
-            input.setAttribute('id', 'feet')
-            input.setAttribute('class', 'form-control')
-            input.setAttribute('name', 'feet')
-            input.setAttribute('placeholder', 'Feet')
-            input.setAttribute('min', '3')
-            input.setAttribute('max', '7')
-            input.setAttribute('step', '1')
-            input.setAttribute('required', true)
-
-
-            const labelInch = document.createElement("label");
-            labelInch.setAttribute('for', 'inches');
-            labelInch.innerHTML = "Inches";
-            const inputInch = document.createElement("input");
-            inputInch.setAttribute('type', 'number')
-            inputInch.setAttribute('id', 'inches')
-            inputInch.setAttribute('class', 'form-control')
-            inputInch.setAttribute('name', 'inches')
-            inputInch.setAttribute('placeholder', 'Inches')
-            inputInch.setAttribute('min', '0')
-            inputInch.setAttribute('max', '11')
-            inputInch.setAttribute('step', '1')
-            inputInch.setAttribute('required', true)
-
-            const parentFeet = document.getElementById("feet")
-            const parentInch = document.getElementById("inch")
-
-            parentFeet.appendChild(input)
-            parentFeet.appendChild(label)
-            parentInch.appendChild(inputInch)
-            parentInch.appendChild(labelInch)
-        } else if (value == 2) {
-            const parentFirst = document.getElementById("first")
-            parentFirst.innerHTML = "";
-
-            const labelCent = document.createElement("label");
-            labelCent.setAttribute('for', 'cent');
-            labelCent.innerHTML = "Centimeters";
-            const input = document.createElement("input");
-            input.setAttribute('type', 'number')
-            input.setAttribute('id', 'cent')
-            input.setAttribute('class', 'form-control')
-            input.setAttribute('name', 'cent')
-            input.setAttribute('placeholder', 'Centimeters')
-            input.setAttribute('min', '100')
-            input.setAttribute('max', '230')
-            input.setAttribute('step', '1')
-            input.setAttribute('required', true)
-
-            const parent = document.getElementById("second")
-            parent.appendChild(input)
-            parent.appendChild(labelCent)
-        } else {
-            const parentFirst = document.getElementById("first")
-            const parentSec = document.getElementById("second")
-            if(parentFirst) {
-                parentFirst.innerHTML = "";
-            }
-            if (parentSec) {
-                parentSec.innerHTML = "";
-            }
-        }
-    }
-</script>
+<script src="{{ url_for('static', filename = 'quest3.js') }}"></script>
 {% endblock %}
